--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 				alert('No application build found, redirecting to debug.html.');
 				location = 'debug.html';
 			}
-			new App().renderInto(document.body);
+			
+			new ex.Console().renderInto(document.body);​
 		</script>
 	</body>
 </html>
