--- a/index.html
+++ b/index.html
@@ -16,13 +16,8 @@
 		<script src="build/app.js"></script>
 	</head>
 	<body class="enyo-unselectable">
-		<script>
-			if (!window.App) {
-				alert('No application build found, redirecting to debug.html.');
-				location = 'debug.html';
-			}
-			
-			new ex.Console().renderInto(document.body);​
+		<script>			
+			new ex.Console().renderInto(document.body);
 		</script>
 	</body>
 </html>
